# antikythera

./: README.md  main.py  pyproject.toml
main/: __init__.py  antikythera.py  main.py  rotor.py
test/: test_antikythera.py  test_main.py  test_rotor.py
