[tool.poetry]
name = "antikythera-solve"
version = "0.0.1"
description = "Solution for the 'Greek Computer' puzzle"
authors = ["Matt <matthew.j.alioto@gmail.com>"]
readme = "README.md"
packages = [{include = "antikythera_solve"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
